--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
 			<div class="header-wrapper">
 				<nav class="nav">
 					<ul class="nav-list">
-						<li class="nav-item"><a href="#" class="nav-link link">Contacts</a></li>
-						<li class="nav-item"><a href="#" class="nav-link link">About Me</a></li>
-						<li class="nav-item"><a href="#" class="nav-link link">Skills</a></li>
-						<li class="nav-item"><a href="#" class="nav-link link">Experience</a></li>
-						<li class="nav-item"><a href="#" class="nav-link link">Languages</a></li>
-						<li class="nav-item"><a href="#" class="nav-link link">Education</a></li>
+						<li class="nav-item"><a href="#contacts" class="nav-link link">Contacts</a></li>
+						<li class="nav-item"><a href="#about-me" class="nav-link link">About Me</a></li>
+						<li class="nav-item"><a href="#skills" class="nav-link link">Skills</a></li>
+						<li class="nav-item"><a href="#experience" class="nav-link link">Experience</a></li>
+						<li class="nav-item"><a href="#languages" class="nav-link link">Languages</a></li>
+						<li class="nav-item"><a href="#education" class="nav-link link">Education</a></li>
 					</ul>
 				</nav>
+				<div class="hamburger">
+					<span class="bar"></span>
+					<span class="bar"></span>
+					<span class="bar"></span>
+				</div>
 			</div>
 		</div>
 	</header>
@@ -141,5 +146,6 @@
 	<footer class="footer">
 		<div class="wrapper footer-wrapper"></div>
 	</footer>
+	<script src="burger.js"></script>
 </body>
 </html>
