feat: change collour

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<section class="section" id="experience">
 					<h2 class="title-list">Experience</h2>
 					<p>
-						System administrator ООО "Правовой Агент", Gomel | 30.07.2020 Software installation and configuration, connecting computers to networks.
+						System administrator ООО "Правовой Агент", Gomel | 30.07.2020 - present | Software installation and configuration, connecting computers to networks.
 					</p>
 				</section>
 				<section class="section" id="languages">
